--- a/src/lib/core/style/_menu-common.scss
+++ b/src/lib/core/style/_menu-common.scss
@@ -26,11 +26,8 @@ $mat-menu-side-padding: 16px !default;
 
   // Needs to be a block for the ellipsis to work.
   display: block;
-  line-height: $mat-menu-item-height;
-  height: $mat-menu-item-height;
-  padding: 0 $mat-menu-side-padding;
+  padding: 13.5px $mat-menu-side-padding;
 
-  font-size: $mat-menu-font-size;
   font-family: $mat-font-family;
   text-align: left;
   text-decoration: none;   // necessary to reset anchor tags
